[project]
name = "aio-mischief"
version = "0.1.0"
description = "Make aiomonitor display async generator stacks."
authors = [
    { name = "Pierre Chapuis", email = "git@catwell.info" }
]
dependencies = [
    "aiomonitor>=0.7.1",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/aio_mischief"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "UP",  # pyupgrade
  "A",   # flake8-builtins
  "B",   # flake8-bugbear
  "Q",   # flake8-quotes
  "I",   # isort
]

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__"]
